--- a/views/login-signup/login.ejs
+++ b/views/login-signup/login.ejs
@@ -7,6 +7,7 @@
   
   <!-- Font Awesome for icons -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="/css/chatbot.css">
   
   <style>
     * {
@@ -124,6 +125,7 @@
 
   <!-- Include Navigation -->
   <%- include('../common/navigation.ejs') %> 
+  <%- include('../common/chatbot.ejs') %>
 
   <div class="container">
     <div class="info-section">
