--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -9,6 +9,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.6/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/chatbot.css">
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -39,7 +40,7 @@
             padding-right: 50px;
         }
 
-        h3 {
+        h2 {
             margin: 0 0 30px 0;
             font-size: 36px;
             color: #2c3e50;
@@ -48,7 +49,7 @@
             position: relative;
         }
 
-        h3::after {
+        h2::after {
             content: '';
             display: block;
             width: 60px;
@@ -228,11 +229,15 @@
                 max-width: 100%;
             }
         }
+
+
+
     </style>
 </head>
 
 <body>
     <%- include('./common/navigation.ejs') %>
+    <%- include('./common/chatbot.ejs') %>
 
     <main>
         <div class="profile-card">
