--- a/views/rentals/product-details.ejs
+++ b/views/rentals/product-details.ejs
@@ -6,6 +6,7 @@
   <title><%= product.title %> Details</title>
   <link rel="stylesheet" href="/css/main.css">
   <link rel="stylesheet" href="/css/forms.css">
+  <link rel="stylesheet" href="/css/chatbot.css">
   <link rel="stylesheet" href="/css/rentalStyles.css">
   <style>
     .rental-calendar {
@@ -93,6 +94,7 @@
 <body>
   <div id="navbar">
     <%- include('../common/navigation.ejs') %>
+    <%- include('../common/chatbot.ejs') %>
   </div>
 
   <main class="product-details-container">
