--- a/views/rentals/rent-items.ejs
+++ b/views/rentals/rent-items.ejs
@@ -6,6 +6,7 @@
   <title><%= pageTitle %></title>
   <link rel="stylesheet" href="/css/main.css">
   <link rel="stylesheet" href="/css/forms.css">
+  <link rel="stylesheet" href="/css/chatbot.css">
   <link rel="stylesheet" href="/css/rentalStyles.css">
 
 </head>
@@ -13,6 +14,7 @@
   <!-- Include Navbar -->
   <div id="navbar">
     <%- include('../common/navigation.ejs') %>
+    <%- include('../common/chatbot.ejs') %>
   </div>
 
   <main>
