--- a/views/rentals/rentalHome.ejs
+++ b/views/rentals/rentalHome.ejs
@@ -5,12 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= pageTitle %></title>
     <link rel="stylesheet" href="/css/rentalStyles.css">
+    <link rel="stylesheet" href="/css/chatbot.css">
 </head>
 <body>
 
     <!-- Include Navbar -->
     <div id="navbar">
         <%- include('../common/navigation.ejs') %>
+        <%- include('../common/chatbot.ejs') %>
     </div>
 
     <!-- Renting Section -->
