--- a/views/secondHand/direct-add-product.ejs
+++ b/views/secondHand/direct-add-product.ejs
@@ -5,10 +5,12 @@
   <title>Direct Selling</title>
   <link rel="stylesheet" href="/css/forms.css">
   <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="/css/chatbot.css">
   <link rel="stylesheet" href="/css/product.css">
 </head>
 <body>
   <%- include('../common/navigation.ejs') %>
+  <%- include('../common/chatbot.ejs') %>
 
   <main>
     <form class="product-form" action="/secondHand/sell/direct-add-product" method="POST" enctype="multipart/form-data">
