--- a/views/secondHand/secondHandHome.ejs
+++ b/views/secondHand/secondHandHome.ejs
@@ -5,12 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title><%= pageTitle %></title>
+    <link rel="stylesheet" href="/css/chatbot.css">
     <!-- <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/product.css"> -->
     <link rel="stylesheet" href="/css/rentalStyles.css">
 </head>
 
 <%- include('../common/navigation.ejs') %>
+<%- include('../common/chatbot.ejs') %>
 
 
 <div class="renting-container">
