--- a/views/subscriptionSwapping/add-product.ejs
+++ b/views/subscriptionSwapping/add-product.ejs
@@ -9,10 +9,12 @@
   <link rel="stylesheet" href="/css/main.css">
   <link rel="stylesheet" href="/css/forms.css">
   <link rel="stylesheet" href="/css/product.css">
+  <link rel="stylesheet" href="/css/chatbot.css">
 </head>
 
 <body>
   <%- include('../common/navigation.ejs') %>
+  <%- include('../common/chatbot.ejs') %>
   
   <main>
     <form class="product-form" action="/subscription/sell/add-product" method="POST">
