--- a/views/subscriptionSwapping/addBidProduct.ejs
+++ b/views/subscriptionSwapping/addBidProduct.ejs
@@ -12,10 +12,12 @@
     <link rel="stylesheet" href="/css/forms.css">
     <link rel="stylesheet" href="/css/product.css">
     <link rel="stylesheet" href="/css/navigation.css">
+    <link rel="stylesheet" href="/css/chatbot.css">
 </head>
 
 <body>
     <%- include('../common/navigation.ejs') %>
+    <%- include('../common/chatbot.ejs') %>
 
         <main>
             <form class="product-form" action="/subscription/buy/<%= productId %>/add-bid-product" method="POST">
