--- a/views/subscriptionSwapping/buy.ejs
+++ b/views/subscriptionSwapping/buy.ejs
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="/css/forms.css">
   <link rel="stylesheet" href="/css/rentalStyles.css">
   <link rel="stylesheet" href="/css/navigation.css">
+  <link rel="stylesheet" href="/css/chatbot.css">
   <style>
     /* Verification badges */
     .verified-badge {
@@ -71,6 +72,7 @@
 <body>
   <div id="navbar">
     <%- include('../common/navigation.ejs') %>
+    <%- include('../common/chatbot.ejs') %>
   </div>
   <main>
     <h1>Subscriptions</h1></br>
