--- a/views/subscriptionSwapping/direct-verify-credentials.ejs
+++ b/views/subscriptionSwapping/direct-verify-credentials.ejs
@@ -5,6 +5,7 @@
   <title>Direct Selling Verification</title>
   <link rel="stylesheet" href="/css/main.css">
   <link rel="stylesheet" href="/css/forms.css">
+  <link rel="stylesheet" href="/css/chatbot.css">
   <style>
     .alert-error {
       color: #721c24;
@@ -41,6 +42,7 @@
 </head>
 <body>
   <%- include('../common/navigation.ejs') %>
+  <%- include('../common/chatbot.ejs') %>
   <main>
     <form class="credentials-form" action="/subscription/verify-direct-credentials" method="POST">
       <h2>Verify Platform Credentials</h2>
