--- a/views/subscriptionSwapping/subscriptionCart.ejs
+++ b/views/subscriptionSwapping/subscriptionCart.ejs
@@ -8,10 +8,12 @@
   <link rel="stylesheet" href="/css/cart.css">
   <link rel="stylesheet" href="/css/forms.css">
   <link rel="stylesheet" href="/css/rentalStyles.css">
+  <link rel="stylesheet" href="/css/chatbot.css">
 </head>
 <body>
   <div id="navbar">
     <%- include('../common/navigation.ejs') %>
+    <%- include('../common/chatbot.ejs') %>
   </div>
   <main class="cart-container">
     <div class="cart-header">
