--- a/views/subscriptionSwapping/subscriptionHome.ejs
+++ b/views/subscriptionSwapping/subscriptionHome.ejs
@@ -11,9 +11,11 @@
     <!-- <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/product.css"> -->
     <link rel="stylesheet" href="/css/rentalStyles.css">
+    <link rel="stylesheet" href="/css/chatbot.css">
 </head>
 
 <%- include('../common/navigation.ejs') %>
+<%- include('../common/chatbot.ejs') %>
 
 
     <div class="renting-container">
