--- a/views/subscriptionSwapping/verify-credentials.ejs
+++ b/views/subscriptionSwapping/verify-credentials.ejs
@@ -6,6 +6,7 @@
   <title>Verify Credentials</title>
   <link rel="stylesheet" href="/css/main.css">
   <link rel="stylesheet" href="/css/forms.css">
+  <link rel="stylesheet" href="/css/chatbot.css">
   <style>
     .alert-error {
       color: #721c24;
@@ -39,6 +40,7 @@
 </head>
 <body>
   <%- include('../common/navigation.ejs') %>
+  <%- include('../common/chatbot.ejs') %>
   <main>
     <form class="credentials-form" action="/subscription/verify-credentials" method="POST">
       <h2>Verify Platform Credentials</h2>
