--- a/views/cart/unifiedCart.ejs
+++ b/views/cart/unifiedCart.ejs
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="/css/main.css">
   <link rel="stylesheet" href="/css/cart.css">
   <link rel="stylesheet" href="/css/forms.css">
+  <link rel="stylesheet" href="/css/chatbot.css">
   <link rel="stylesheet" href="/css/rentalStyles.css">
   <style>
     .cart-section {
@@ -56,6 +57,7 @@
 <body>
   <div id="navbar">
     <%- include('../common/navigation.ejs') %>
+    <%- include('../common/chatbot.ejs') %>
   </div>
   <main class="cart-container">
     <div class="cart-header">
