--- a/views/secondHand/add-product.ejs
+++ b/views/secondHand/add-product.ejs
@@ -7,10 +7,12 @@
   <title><%= pageTitle %></title>
   <link rel="stylesheet" href="/css/main.css">
   <link rel="stylesheet" href="/css/forms.css">
+  <link rel="stylesheet" href="/css/chatbot.css">
   <link rel="stylesheet" href="/css/product.css">
 </head>
 <body>
   <%- include('../common/navigation.ejs') %>
+  <%- include('../common/chatbot.ejs') %>
 
   <main>
 
