--- a/views/secondHand/post-type.ejs
+++ b/views/secondHand/post-type.ejs
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Choose Listing Type</title>
+  <link rel="stylesheet" href="/css/chatbot.css">
   <style>
     * {
       margin: 0;
@@ -128,6 +129,7 @@
 </head>
 <body>
   <%- include('../common/navigation.ejs') %>
+  <%- include('../common/chatbot.ejs') %>
 
   <div class="renting-container">
     <h1>Sell Your Items</h1>
