--- a/views/subscriptionSwapping/direct-add-product.ejs
+++ b/views/subscriptionSwapping/direct-add-product.ejs
@@ -6,9 +6,11 @@
   <link rel="stylesheet" href="/css/forms.css">
   <link rel="stylesheet" href="/css/main.css">
   <link rel="stylesheet" href="/css/product.css">
+  <link rel="stylesheet" href="/css/chatbot.css">
 </head>
 <body>
   <%- include('../common/navigation.ejs') %>
+  <%- include('../common/chatbot.ejs') %>
 
   <main>
     <form class="product-form" action="/subscription/sell/direct-add-product" method="POST">
