Added favicon and product UI changes

--- a/views/cart/unifiedCart.ejs
+++ b/views/cart/unifiedCart.ejs
@@ -3,11 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Your Unified Cart</title>
+  <title>Your Cart</title>
   <link rel="stylesheet" href="/css/main.css">
   <link rel="stylesheet" href="/css/cart.css">
   <link rel="stylesheet" href="/css/forms.css">
   <link rel="stylesheet" href="/css/rentalStyles.css">
+  <link rel="icon" type="image/png" href="/assets/logo2.png">
+  
   <style>
     .cart-section {
       margin: 2rem 0;
@@ -33,7 +35,8 @@
     }
     .toggle-btn {
       font-size: 1.5rem;
-      background: none;
+      /* background: none; */
+      background-color: #838383;
       border: none;
       cursor: pointer;
       padding: 0 1rem;
@@ -58,7 +61,7 @@
   </div>
   <main class="cart-container">
     <div class="cart-header">
-      <h1>Your Unified Cart</h1>
+      <h1>Your Cart</h1>
     </div>
 
     <% const sections = {
