--- a/views/login-signup/signup.ejs
+++ b/views/login-signup/signup.ejs
@@ -7,7 +7,8 @@
   
   <!-- Font Awesome for icons -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
-  
+  <link rel="icon" type="image/png" href="/assets/logo2.png">
+
   <style>
     * {
       margin: 0;
@@ -122,13 +123,11 @@
 </head>
 <body>
 
-  <!-- Include Navigation -->
-  <%- include('../common/navigation.ejs') %> 
-
   <div class="container">
     <div class="info-section">
       <h1>Trade<span>Trail</span></h1>
       <p>Swap, Sell, Rent, Repeat!</p>
+      <img src="/assets/logo.png" alt="TradeTrail Logo" style="display: block; margin: auto; margin-top: 40px; height: 200px;">
     </div>
     <div class="form-section">
       <form id="signupForm">
