--- a/views/rentals/rentalCart.ejs
+++ b/views/rentals/rentalCart.ejs
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="/css/cart.css">
   <link rel="stylesheet" href="/css/forms.css">
   <link rel="stylesheet" href="/css/rentalStyles.css">
+  <link rel="icon" type="image/png" href="/assets/logo2.png">
 </head>
 
 <body>
