--- a/views/secondHand/add-product.ejs
+++ b/views/secondHand/add-product.ejs
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="/css/main.css">
   <link rel="stylesheet" href="/css/forms.css">
   <link rel="stylesheet" href="/css/product.css">
+  <link rel="icon" type="image/png" href="/assets/logo2.png">
+
 </head>
 <body>
   <%- include('../common/navigation.ejs') %>
