--- a/views/subscriptionSwapping/auction.ejs
+++ b/views/subscriptionSwapping/auction.ejs
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="/css/forms.css">
   <link rel="stylesheet" href="/css/navigation.css">
   <link rel="stylesheet" href="/css/auction.css">
+  <link rel="icon" type="image/png" href="/assets/logo2.png">
+
   <style>
     
 /* Message types */
