--- a/views/subscriptionSwapping/direct-verify-credentials.ejs
+++ b/views/subscriptionSwapping/direct-verify-credentials.ejs
@@ -5,6 +5,8 @@
   <title>Direct Selling Verification</title>
   <link rel="stylesheet" href="/css/main.css">
   <link rel="stylesheet" href="/css/forms.css">
+  <link rel="icon" type="image/png" href="/assets/logo2.png">
+
   <style>
     .alert-error {
       color: #721c24;
