--- a/public/css/rentalStyles.css
+++ b/public/css/rentalStyles.css
@@ -37,7 +37,7 @@ body {
     padding: 90px 60px;
     border-radius: 10px;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
-    width: 300px;
+    width: 330px;
 }
 
 .option h2 {
@@ -580,3 +580,38 @@ body {
       }
       .prev { left: 5px; }
       .next { right: 5px; }
+
+      .post-button {
+        text-decoration: none;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .circle {
+        width: 160px;
+        height: 160px;
+        background-color: #b3cf99;
+        /* color: black; */
+        color: #2d4d34;
+        font-size: 100px;
+        font-weight: bold;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 50%;
+        transition: background-color 0.3s ease;
+        margin: 70px;
+    }
+    
+    .post-text {
+        margin-top: 10px;
+        font-size: 30px;
+        font-weight: bold;
+        max-width: 160px;
+        color: #333;
+    }
+
+    .circle:hover {
+      background-color: #95b579;
+  }
