--- a/views/404.ejs
+++ b/views/404.ejs
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Page Not Found</title>
+    <link rel="icon" type="image/png" href="/assets/logo2.png">
 </head>
 <body>
     <h1>404 - Page Not Found</h1>
