--- a/views/error.ejs
+++ b/views/error.ejs
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Error</title>
+    <link rel="icon" type="image/png" href="/assets/logo2.png">
 </head>
 <body>
     <h1><%= message %></h1>
