--- a/views/rentals/product-details.ejs
+++ b/views/rentals/product-details.ejs
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="/css/main.css">
   <link rel="stylesheet" href="/css/forms.css">
   <link rel="stylesheet" href="/css/rentalStyles.css">
+  <link rel="icon" type="image/png" href="/assets/logo2.png">
+  
   <style>
     .rental-calendar {
       background: #f8f9fa;
