--- a/views/rentals/rent-items.ejs
+++ b/views/rentals/rent-items.ejs
@@ -7,8 +7,9 @@
   <link rel="stylesheet" href="/css/main.css">
   <link rel="stylesheet" href="/css/forms.css">
   <link rel="stylesheet" href="/css/rentalStyles.css">
-
+  <link rel="icon" type="image/png" href="/assets/logo2.png">
 </head>
+
 <body>
   <!-- Include Navbar -->
   <div id="navbar">
@@ -26,11 +27,22 @@
       >
       <button type="submit">Search</button> 
     </form>
-    <button type="button" onclick="window.location.href='/rental/post'">POST AN ITEM !</button>
+    <!-- <button type="button" onclick="window.location.href='/rental/post'">POST AN ITEM !</button> -->
     
     <% if (products && products.length > 0) { %>
       <div class="rental-list">
+
+        <div class="rental-item">
+          <a href="/rental/post" class="post-button">
+            <div class="circle">
+                +
+            </div>
+            <span class="post-text">POST AN ITEM !</span>
+        </a>
+        </div>
+
         <% products.forEach((product, index) => { %>
+
           <div class="rental-item">
             <div class="product-card">
               
