--- a/views/secondHand/buy.ejs
+++ b/views/secondHand/buy.ejs
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="/css/forms.css">
   <link rel="stylesheet" href="/css/rentalStyles.css">
   <link rel="stylesheet" href="/css/navigation.css">
+  <link rel="icon" type="image/png" href="/assets/logo2.png">
+
 </head>
 <body>
   <div id="navbar">
@@ -25,11 +27,22 @@
       >
       <button type="submit">Search</button>
     </form>
-    <button type="button" onclick="window.location.href='/secondHand/sell'">POST AN ITEM !</button>
+    <!-- <button type="button" onclick="window.location.href='/secondHand/sell'">POST AN ITEM !</button> -->
     
     <% if (prods.length > 0) { %>
       <div class="rental-list">
+
+        <div class="rental-item">
+          <a href="/secondHand/sell" class="post-button">
+            <div class="circle">
+                +
+            </div>
+            <span class="post-text">POST AN ITEM !</span>
+        </a>
+        </div>
+
         <% prods.forEach((product, index) => { %>
+
           <div class="rental-item">
             <div class="product-card">
 
