--- a/views/secondHand/secondHandHome.ejs
+++ b/views/secondHand/secondHandHome.ejs
@@ -8,6 +8,8 @@
     <!-- <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/product.css"> -->
     <link rel="stylesheet" href="/css/rentalStyles.css">
+    <link rel="icon" type="image/png" href="/assets/logo2.png">
+
 </head>
 
 <%- include('../common/navigation.ejs') %>
