--- a/views/subscriptionSwapping/subscriptionCart.ejs
+++ b/views/subscriptionSwapping/subscriptionCart.ejs
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="/css/cart.css">
   <link rel="stylesheet" href="/css/forms.css">
   <link rel="stylesheet" href="/css/rentalStyles.css">
+  <link rel="icon" type="image/png" href="/assets/logo2.png">
+
 </head>
 <body>
   <div id="navbar">
