--- a/views/subscriptionSwapping/verify-credentials.ejs
+++ b/views/subscriptionSwapping/verify-credentials.ejs
@@ -6,6 +6,8 @@
   <title>Verify Credentials</title>
   <link rel="stylesheet" href="/css/main.css">
   <link rel="stylesheet" href="/css/forms.css">
+  <link rel="icon" type="image/png" href="/assets/logo2.png">
+
   <style>
     .alert-error {
       color: #721c24;
