--- a/views/verification-error.ejs
+++ b/views/verification-error.ejs
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Verification Error</title>
+    <link rel="icon" type="image/png" href="/assets/logo2.png">
 </head>
 <body>
     <h1>Verification Failed</h1>
