--- a/views/verification-success.ejs
+++ b/views/verification-success.ejs
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Email Verified</title>
+    <link rel="icon" type="image/png" href="/assets/logo2.png">
 </head>
 <body>
     <h1>Email Verified Successfully!</h1>
