--- a/public/css/product.css
+++ b/public/css/product.css
@@ -138,5 +138,27 @@ body {
     opacity: 0;
     font-size: 16px;
 }
+.scroll-text {
+    white-space: nowrap;
+    font-size: 24px;
+    font-weight: bold;
+    position: absolute;
+    animation: scrollText 10s linear infinite;
+  }
 
+  @keyframes scrollText {
+    from {
+      left: -100%;
+    }
+    to {
+      left: 100%;
+    }
+  }
 
+  .scroll-container {
+    width: 100%;
+    overflow: hidden;
+    position: relative;
+    height: 40px;
+    background: lightgray;
+  }
