--- a/views/common/chatbot.ejs
+++ b/views/common/chatbot.ejs
@@ -24,6 +24,15 @@
             <div class="message bot-message">
                 Hello! How can I help you today?
             </div>
+            <!-- Add this loading template -->
+            <div class="loading-message" id="loadingTemplate" style="display: none;">
+                <div class="loading-dots">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+            </div>
+
         </div>
         <div class="chat-input">
             <input type="text" id="userInput" placeholder="Type your message...">
