--- a/views/auction-details.ejs
+++ b/views/auction-details.ejs
@@ -51,7 +51,7 @@
 </head>
 <body>
   <header>
-    <h1>Auction Details for <%= product.name %></h1>
+    <h1>Auction Details for <%= product.title %></h1>
     <p>Seller: <%= product.seller.fullName %></p>
     <p>Minimum Price: $<%= product.min_price %></p>
   </header>
