--- a/views/secondHand/secondHandHome.ejs
+++ b/views/secondHand/secondHandHome.ejs
@@ -5,20 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title><%= pageTitle %></title>
-    <!-- <link rel="stylesheet" href="/css/main.css">
-    <link rel="stylesheet" href="/css/product.css"> -->
     <link rel="stylesheet" href="/css/rentalStyles.css">
+    
 </head>
 
 <%- include('../common/navigation.ejs') %>
-
-
 
 <div class="renting-container">
     <h1>Second-Hand Chain Buying Options</h1>
     <p>Choose an option to proceed</p>
 
-    
     <div class="options">
         <div class="option">
             <h2>Want to Post Something?</h2>
@@ -30,7 +26,7 @@
             <h2>Want to Buy Something?</h2>
             <p>Browse available items for sale and get what you need</p>
             <button onclick="window.location.href='/secondHand/buy'">Buy an Item</button>
+            <span class="info-icon">i</span>
         </div>
     </div>
 </div>
-
